--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,13 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Friend Finder</title>
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
 	integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="public/style.css">
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 <script src="https://use.fontawesome.com/df0aaefc91.js"></script>
 </head>
 <body>
@@ -23,8 +20,7 @@ integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7
 			<button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</button>
 		</a>
 	</div>
-
-	<a href="/api/friends">API Friends List</a> | <a href="https://github.com/Sergey60327" target="_blank">GitHub Repo</a>
+ <a href="/api/friends">API Friends List</a> | <a href="https://github.com/Sergey60327" target="_blank">GitHub Repo</a>
 </div>
 
 </body>
