--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,200 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Friend Finder - Survey</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-	integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-  crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title>FriendFinder</title>
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+
 </head>
-
-
 <body>
-<div class="container-fluid">
-	<div class="jumbotron">
-		<h1>Survey Questions</h1><br>
-		<hr>
+
+  <div class="container">
+
+    <h2>Survey Questions</h2>
+    <hr>
+
     <h3><strong>About You</strong></h3>
-		<form method="POST" action="/newFriend" role="form">
+    <h4>Name (Required)</h4>
+    <input type="text" name="" id="name" class="form-control" required >
 
+    <h4>Link to Photo Image (Required)</h4>
+    <input type="text" name="" id="photo" class="form-control" required >
 
-			<fieldset class="form-group">
-				<label for="name">Name (Required)</label>
-				<input type="text" class="form-control" placeholder="Your Name" id="name" name="name" required>
-			</fieldset>
+    <hr>
 
-			<fieldset class="form-group">
-				<label for="photo">Link to Photo Image (Required)</label>
-				<input type="text" class="form-control" placeholder="Drag your pic here" id="photo" name="photo" required>
-			</fieldset>
-			<hr>
-
-			<h4><strong>Question 1</strong></h4>
-
-			<fieldset class="form-group">
-				<label for="question01">You like to try new things</label>
-				<br>
-				<div class="col-md-4">
-          <select class="form-control" title="Select an option" id="question01" name="scores[0]">
+    <h3><strong>Question 1</strong></h3>
+    <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+    <select data-placeholder="" class="chosen-select" id="q1">
+      <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 2</strong></h3>
+    <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
+    <select data-placeholder="" class="chosen-select" id="q2">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 3</strong></h3>
+    <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+    <select data-placeholder="" class="chosen-select" id="q3">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 4</strong></h3>
+    <h4>You rarely do something just out of sheer curiosity.</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 5</strong></h3>
+    <h4>People can rarely upset you.</h4>
+    <select data-placeholder="" class="chosen-select" id="q5">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 6</strong></h3>
+    <h4>It is often difficult for you to relate to other people’s feelings.</h4>
+    <select data-placeholder="" class="chosen-select" id="q6">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 7</strong></h3>
+    <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
+    <select data-placeholder="" class="chosen-select" id="q7">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+    <h3><strong>Question 8</strong></h3>
+    <h4>You rarely get carried away by fantasies and ideas.</h4>
+    <select data-placeholder="" class="chosen-select" id="q8">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
 
-			<h4><strong>Question 2</strong></h4>
+    <h3><strong>Question 9</strong></h3>
+    <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
+    <select data-placeholder="" class="chosen-select" id="q9">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
 
-			<fieldset class="form-group">
-				<label for="question02">You trust your experience more rather than your intuition</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question02" name="scores[1]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
+    <h3><strong>Question 10</strong></h3>
+    <h4>You feel more energetic after spending time with a group of people.</h4>
+    <select data-placeholder="" class="chosen-select" id="q10">
+      <option value=""></option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
 
-			<h4><strong>Question 3</strong></h4>
+    <br>
+    <br>
 
-			<fieldset class="form-group">
-				<label for="question03">It is hard to distruct you!</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question03" name="scores[2]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
+    <!-- Submit Button -->
+    <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
+ Submit</button>
 
-			<h4><strong>Question 4</strong></h4>
+    <hr>
+      <footer class="footer">
+        <div class="container">
+            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        </div>
+      </footer>
 
-			<fieldset class="form-group">
-				<label for="question04">You like to think twice before jump into the action.</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control"  id="question04"  data-width="75%" name="scores[3]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-
-			<h4><strong>Question 5</strong></h4>
-
-			<fieldset class="form-group">
-				<label for="question05">You consider yourself laid back person..</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question05" name="scores[4]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-
-			<h4><strong>Question 6</strong></h4>
-
-			<fieldset class="form-group">
-				<label for="question06">You are very attentive and caring!.</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question06" name="scores[5]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-
-			<h4><strong>Question 7</strong></h4>
-
-			<fieldset class="form-group">
-				<label for="question07">You would rather lie then will heart others feelings!</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question07" name="scores[6]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-
-			<h4><strong>Question 8</strong></h4>
-
-			<fieldset class="form-group">
-				<label for="question08">You are "down to earth" person.</label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question08" name="scores[7]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-			<h4><strong>Question 9</strong></h4>
-			<fieldset class="form-group">
-				<label for="question09">Everyone's opnions should be respected. </label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question09" name="scores[8]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset>
-			<h4><strong>Question 10</strong></h4>
-			<fieldset class="form-group">
-				<label for="question10"> You feel more comfortable staying at home rather then going out. </label>
-				<br>
-				<div class="col-md-4">
-					<select class="form-control" id="question10" name="scores[9]">
-						<option value="1">1 (Strongly Disagree)</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5 (Strongly Agree)</option>
-					</select>
-				</div>
-			</fieldset><br>
-			<input type="button" class="btn btn-primary btn-lg btn-block" value="Submit" id="submit">
-		</form>
-	</div>
-</div>
+  </div>
 
 
-	<footer>
-	        <div class="container">
-	 <a href="/api/friends">API Friends List</a> | <a href="https://github.com/Sergey60327" target="_blank">GitHub Repo</a>
-         </div>
-</footer>
+  <div id="resultsModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title"><strong>Best Match</strong></h2>
+        </div>
+        <div class="modal-body">
+          <h2 id="matchName"></h2>
+          <img style="max-width: 550px" id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script type="text/javascript">
+
+
+    $("#submit").on("click", function(){
+
+      function validateForm() {
+      var isValid = true;
+      $('.form-control').each(function() {
+        if ( $(this).val() === '' )
+            isValid = false;
+      });
+      $('.chosen-select').each(function() {
+        if( $(this).val() === "")
+          isValid = false
+      })
+      return isValid;
+    }
+
+    if (validateForm() == true)
+    {
+
+        var userData = {
+          name: $("#name").val(),
+          photo: $("#photo").val(),
+          scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val() ]
+        }
+
+        var currentURL = window.location.origin;
+
+        $.post(currentURL + "/api/friends", userData, function(data){
+
+          $("#matchName").text(data.name);
+          $('#matchImg').attr("src", data.photo);
+
+          $("#resultsModal").modal('toggle');
+        });
+    }
+    else
+    {
+      alert("Please fill out all fields before submitting!");
+    }
+
+      return false;
+    });
+  </script>
 
 </body>
 </html>
